# 42186_final_project

./: .gitignore  Makefile  README.md  cifar_test.py  main.py  main_notebook.ipynb  mnist_DDPM_test.py  pyproject.toml  requirements.txt
configs/: config.yaml
jobscript/: README.md  jobscript_template.sh  jobscript_template_sample.sh  submit_sample_job.sh  submit_train_job.sh
notebooks/: explore_data.ipynb
src/: calculate_fid.py  cifar_ddpm_test.py  main.py  mnist_VAE_test.py
src/data_utils/: dataloader.py  get_data.py  metadata.py  samples_dataloader.py  scrape_fusion.py
src/models/: DDPM.py  VAE.py  unet.py  utils.py  vae_priors.py
src/training/: trainer.py
src/visualizations/: functions.py  plot_loss.py
